[URL-2] Experimental endpoint that means you can use the "shortened" URLs correctly
